--- a/Fuku/Base.lproj/Main.storyboard
+++ b/Fuku/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,20 +19,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Fuku" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G7I-LL-6rw">
-                                <rect key="frame" x="159" y="177" width="56" height="32"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="darkBlueBG" translatesAutoresizingMaskIntoConstraints="NO" id="WQd-rk-FCK">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OZG-OO-7FN">
+                                <rect key="frame" x="93" y="271" width="151" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <state key="normal" title=" Add Items" image="hanger"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rTo-Pl-eJk">
+                                <rect key="frame" x="93" y="150" width="173" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="My Wardrobe" image="closet-3"/>
+                                <connections>
+                                    <action selector="myWardrobePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="w5S-0f-SXE"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ww-4I-gsS">
+                                <rect key="frame" x="93" y="394" width="188" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title=" Give Me Ideas!" image="outfit"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="WQd-rk-FCK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="PQ7-xk-ukr"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="WQd-rk-FCK" secondAttribute="bottom" id="mjQ-C5-R8M"/>
+                            <constraint firstAttribute="trailing" secondItem="WQd-rk-FCK" secondAttribute="trailing" id="ngG-cc-pKs"/>
+                            <constraint firstItem="WQd-rk-FCK" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="o7s-tv-BXn"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="addItemsButton" destination="OZG-OO-7FN" id="KkI-OQ-m7n"/>
+                        <outlet property="darkBlueBG" destination="WQd-rk-FCK" id="cz9-xf-Wxg"/>
+                        <outlet property="giveMeIdeasButton" destination="2ww-4I-gsS" id="Fvg-dq-yQb"/>
+                        <outlet property="myWardrobeButton" destination="rTo-Pl-eJk" id="IGy-9s-2aW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="closet-3" width="64" height="64"/>
+        <image name="darkBlueBG" width="414" height="736"/>
+        <image name="hanger" width="64" height="64"/>
+        <image name="outfit" width="64" height="64"/>
+    </resources>
 </document>
