Added selectable selection for the basic fields, need to change the selection toMultiple Selector Row.

--- a/Fuku/Base.lproj/Main.storyboard
+++ b/Fuku/Base.lproj/Main.storyboard
@@ -65,10 +65,10 @@
             </objects>
             <point key="canvasLocation" x="1076" y="133.5832083958021"/>
         </scene>
-        <!--View Controller-->
+        <!--Form Controller View Controller-->
         <scene sceneID="Ebl-QK-Nt0">
             <objects>
-                <viewController id="oQQ-Rj-L2i" sceneMemberID="viewController">
+                <viewController id="oQQ-Rj-L2i" customClass="FormControllerViewController" customModule="Fuku" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YFQ-4H-fUz">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
