--- a/Fuku/Base.lproj/Main.storyboard
+++ b/Fuku/Base.lproj/Main.storyboard
@@ -20,13 +20,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="darkBlueBG" translatesAutoresizingMaskIntoConstraints="NO" id="WQd-rk-FCK">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OZG-OO-7FN">
                                 <rect key="frame" x="93" y="271" width="151" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title=" Add Items" image="hanger"/>
                                 <connections>
+                                    <action selector="addItem:" destination="1jE-xJ-AR2" eventType="touchUpInside" id="M3g-yE-obJ"/>
                                     <segue destination="oQQ-Rj-L2i" kind="show" id="MYb-cd-omn"/>
                                 </connections>
                             </button>
@@ -54,14 +55,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="I4M-lK-bM5"/>
-                    <connections>
-                        <outlet property="addItemsButton" destination="OZG-OO-7FN" id="KkI-OQ-m7n"/>
-                        <outlet property="darkBlueBG" destination="WQd-rk-FCK" id="cz9-xf-Wxg"/>
-                        <outlet property="giveMeIdeasButton" destination="2ww-4I-gsS" id="Fvg-dq-yQb"/>
-                        <outlet property="myWardrobeButton" destination="rTo-Pl-eJk" id="IGy-9s-2aW"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <exit id="1jE-xJ-AR2" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1076" y="133.5832083958021"/>
         </scene>
@@ -72,9 +68,30 @@
                     <view key="view" contentMode="scaleToFill" id="YFQ-4H-fUz">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pzQ-Os-4MU">
+                                <rect key="frame" x="304" y="637" width="55" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Confirm"/>
+                                <connections>
+                                    <action selector="ButtonPressed:" destination="oQQ-Rj-L2i" eventType="touchUpInside" id="Fas-dN-Oer"/>
+                                    <action selector="ConfirmButtonPressed:" destination="oQQ-Rj-L2i" eventType="touchUpInside" id="ObG-bG-VcQ"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name of Item" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VqP-4M-zl2">
+                                <rect key="frame" x="16" y="617" width="117" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="6tG-uB-OeK"/>
                     </view>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="pathToHome" id="iRc-UR-T1u"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7g5-1X-Suk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -105,4 +122,7 @@
         <image name="hanger" width="64" height="64"/>
         <image name="outfit" width="64" height="64"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="iRc-UR-T1u"/>
+    </inferredMetricsTieBreakers>
 </document>
