--- a/Fuku/Base.lproj/Main.storyboard
+++ b/Fuku/Base.lproj/Main.storyboard
@@ -43,6 +43,9 @@
                                 <rect key="frame" x="93" y="394" width="188" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title=" Give Me Ideas!" image="outfit"/>
+                                <connections>
+                                    <segue destination="HEa-7S-AZI" kind="show" id="QKU-3Z-ccA"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -60,6 +63,44 @@
                 <exit id="1jE-xJ-AR2" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1076" y="133.5832083958021"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="k4R-T9-MDD">
+            <objects>
+                <viewController id="HEa-7S-AZI" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YSW-Z8-R47">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="basic_tshirt_template" translatesAutoresizingMaskIntoConstraints="NO" id="oxJ-vx-C8o">
+                                <rect key="frame" x="67" y="128" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="green-skinny-pants-women-women-s-clothes-walk-women-clothing-single-icon-outline-style-vector-symbol-stock-web-88501837" translatesAutoresizingMaskIntoConstraints="NO" id="08z-uW-4BO">
+                                <rect key="frame" x="67" y="269" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="shoe-1" translatesAutoresizingMaskIntoConstraints="NO" id="Swe-gQ-UC4">
+                                <rect key="frame" x="105" y="405" width="165" height="92"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N6s-Gh-BeV">
+                                <rect key="frame" x="134" y="539" width="107" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Generate Outfit"/>
+                                <connections>
+                                    <action selector="Generate:" destination="agx-pG-Fzv" eventType="touchUpInside" id="1Z5-aF-0LK"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="tYO-S4-ihK"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SFL-KZ-aVS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="agx-pG-Fzv" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="124" y="846.9265367316342"/>
         </scene>
         <!--Wardrobe View Controller-->
         <scene sceneID="4f2-7d-Aej">
@@ -201,13 +242,15 @@
         </scene>
     </scenes>
     <resources>
+        <image name="basic_tshirt_template" width="1048" height="932"/>
         <image name="closet-3" width="64" height="64"/>
         <image name="darkBlueBG" width="414" height="736"/>
+        <image name="green-skinny-pants-women-women-s-clothes-walk-women-clothing-single-icon-outline-style-vector-symbol-stock-web-88501837" width="800" height="800"/>
         <image name="hanger" width="64" height="64"/>
         <image name="outfit" width="64" height="64"/>
+        <image name="shoe-1" width="800" height="533"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="MYb-cd-omn"/>
         <segue reference="iRc-UR-T1u"/>
     </inferredMetricsTieBreakers>
 </document>
